Fix multiple overlapping opacity filter

--- a/src/cloak-mode.css
+++ b/src/cloak-mode.css
@@ -12,6 +12,11 @@ body.cloak .account-block {
   text-rendering: optimizeSpeed;
   filter: opacity(0.5);
 }
+body.cloak .name-text *,
+body.cloak .status .content-container *,
+body.cloak .account-container :is(header, main > *:not(.actions)) * {
+  filter: none;
+}
 
 body.cloak .status :is(img, video, audio),
 body.cloak .avatar,
